--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
     <title>Maturitní otázky informatika - Petr Ambrož</title>
 </head>
@@ -42,23 +43,26 @@
             <h2>Pár slov úvodem</h2>
             <p>
                 Maturitní otázky a jejich učení, zpracování, opakování – věčné téma každého maturanta. Alespoň teda od
-                druhého pololetí,
-                kdy už se začíná ta obávaná zkouška pekelně blížit.
+                druhého pololetí, kdy už se začíná ta obávaná zkouška pekelně blížit.
             </p>
             <p>
                 Pokud jsi maturant z ICT, tak jsi tady správně – níže najdeš mnou zpracované otázky a různé doplňující
                 materiály.</p>
-                <p>Většina materiálů jsou věci, které nám posílal pan Trojan a já si je dovolil takto nasdílet a zatřídit k
+            <p>Většina materiálů (docx soubory ke stažení) jsou věci, které nám posílal pan Trojan a já si je dovolil
+                takto nasdílet a zatřídit k
                 patřičným otázkám. Poznámky jsou vše ostatní, co mě k tomu napadlo, nebo mi pomohlo si to
                 zapamatovat.</p>
-                <p>Otázky nemám zpracované všechny – ty, u kterých není odkaz, jsem se rozhodl nechat bez poznámek – buď mi
+            <p>Otázky nemám zpracované všechny – ty, u kterých není odkaz, jsem se rozhodl nechat bez poznámek – buď mi
                 přišly natolik praktické, že psaný text by k ničemu nebyl, nebo tak triviální, že bych to dokázal
                 vymyslet i bez poznámek.</p>
-                <p>A kdyby byly k čemukoliv nějaké otázky – pište, volejte, ptejte se, cokoliv rád dovysvětlím.
-            </p>
+            <p>A kdyby byly k čemukoliv nějaké otázky – pište, ptejte se, cokoliv rád dovysvětlím.</p>
+            <p>Také nabízím konzultaci závěrečné práce – ať už ohledně tématu, stylu psaní, citací, něčeho
+                programovacího nebo čehokoliv jiného. Moje práce je pro inspiraci dostupná <a
+                    href="https://github.com/petrambroz/bot_zaverecna_prace">tady</a>.</p>
             <p>Všechny poznámky jsou původně psány v markdownu a zkonvertovány do HTML pomocí <a
                     href="https://github.com/petrambroz/zapoctak-1ZS">nástroje vlastní výroby</a>, takže je úplně klidně
-                možný, že se při konverzi někde něco <i>pěkně dojebalo</i> a já si toho nevšiml. Buď si toho nevšímejte, nebo mi
+                možný, že se při konverzi někde něco <i>pěkně dojebalo</i> a já si toho nevšiml. Buď si toho nevšímejte,
+                nebo mi
                 dejte vědět a já to napravím :-)</p>
             <h3>O mně</h3>
             <p>
@@ -69,7 +73,7 @@
                 studuji informatiku na Matematicko-fyzikální fakultě Karlovy Univerzity.
             </p>
             <p>
-                V případě otázek (ohledně maturity, závěrečné/seminární práce, VŠ, cokoliv) jsem k zastižení
+                V případě otázek (ohledně maturity, závěrečné/seminární práce, VŠ, matfyzu, cokoliv) jsem k zastižení
                 tady:
             <ul style="display:grid;margin-left: 10%;text-align: left;">
                 <li>petrambroz@icloud.com</li>
@@ -385,9 +389,9 @@
                 <ol class="otazky">
                     <li>základní parametry vektorové grafiky</li>
                     <li>příklady programů určených pro práci s vektorovou grafickou</li>
-                    <li>základní operace (změna velikosti a polohy, otočení a zkosení, duplikace, obrys a výplň,<br>
+                    <li>základní operace (změna velikosti a polohy, otočení a zkosení, duplikace, obrys a výplň,
                         řazení
-                        a seskupení objektů, logické operace, převod na křivky,<br> kombinace rastru a vektoru, export
+                        a seskupení objektů, logické operace, převod na křivky, kombinace rastru a vektoru, export
                         do
                         rastrových formátů ad.)</li>
                 </ol>
@@ -471,8 +475,8 @@
                 <ol class="otazky">
                     <li>základní parametry rastrové grafiky</li>
                     <li>příklady programů určených pro práci s rastrovou grafikou</li>
-                    <li>základní operace (otočení a převrácení, ořez, změna rozměrů, kontrast a jas<br> práce
-                        s histogramem, zaostření a rozmazání, redukce červených očí,<br> kolinearita a perspektiva,
+                    <li>základní operace (otočení a převrácení, ořez, změna rozměrů, kontrast a jas práce
+                        s histogramem, zaostření a rozmazání, redukce červených očí, kolinearita a perspektiva,
                         retušování atd.)</li>
                 </ol>
             </ol>
