--- a/pages/2A.html
+++ b/pages/2A.html
@@ -33,7 +33,7 @@
       velikosti vstupu – to znamená, že pro vstup o velikosti <i>n</i> je potřeba provést <i>n<sup>2</sub></i> iterací.
       Pro malé vstupy to je ok, ale velké množství dat tím třídit není dobrý nápad.</li>
   </ul>
-  <p>Tady nějaké materiály z mých přednášek:</p>
+  <p>Tady nějaké materiály z mých vysokoškolských přednášek:</p>
   <p><a href="media/documents/2A/Trideni.pdf">Bubble, select a insert sort</a>
     <a href="media/documents/2A/mergesort.pdf">Merge sort</a>
   </p>
