--- a/pages/3A.html
+++ b/pages/3A.html
@@ -186,11 +186,7 @@ elif a == b:
     </li>
   </ul>
   <h2>Vývojové diagramy</h2>
-  <img src="vyvojaky.gif" alt="">
-  <ul>
-    <li>idk co k tomu dodat</li>
-  </ul>
-
+  <img src="media/img/vyvojaky.gif">
 </body>
 
 </html>
